# managementServer

./: .env  .env.example  .gitignore  dbConnection.py  pyproject.toml  requirement.txt  requirements.txt  server.py
.github/workflows/: main.yml
cli_controllers/: provider_get_requests.py  vms.py  vms_get_request.py  vms_post_request.py  wg.py
middlewares/: auth_middleware.py
models/: authModels.py  hdfsModel.py  providers.py  vmsModel.py
prometheus_controller/: prometheus.py  prometheus_conf_file_update.py  prometheus_dump_data.py  prometheus_metrics.py
provider_controllers/: provider.py  telemetry.py  vm_crud.py
ui_cli_controllers/: hdfs.py  helper.py  provider_get_requests.py  provider_post_requests.py  provider_server.py  vms_get_request.py  vms_post_request.py  wg.py
user_controllers/: auth.py  cli.py  profile.py  vm_crud.py
